# src/model/dto/book/CreateBookDto.ts
@@ -1,11 +1,9 @@
-export class BookEntity {
-    public readonly id: string;
+export class CreateBookDto {
     public categoryID: string;
     public title: string;
     public author: string;
 
-    constructor(id: string, categoryID: string, title: string, author: string) {
-        this.id = id;
+    constructor(categoryID: string, title: string, author: string) {
         this.categoryID = categoryID;
         this.title = title;
         this.author = author;
